@@ -40,7 +40,9 @@
 <ul class="simple">
 <li>coders/png.c (ReadOneJNGImage): Fix SourceForge bug #518 &quot;Null
 pointer in&quot;.  Also make sure that errors are reported properly due
-to problems with transferring JPEG scanlines.</li>
+to problems with transferring JPEG scanlines.
+(ReadOneJNGImage): Add more checks for null value returned from
+SetImagePixels().</li>
 </ul>
 </blockquote>
 <p>2017-10-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
