@@ -3,6 +3,8 @@
 	* coders/png.c (ReadOneJNGImage): Fix SourceForge bug #518 "Null
 	pointer in".  Also make sure that errors are reported properly due
 	to problems with transferring JPEG scanlines.
+	(ReadOneJNGImage): Add more checks for null value returned from
+	SetImagePixels().
 
 2017-10-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
